--- a/css/main.css
+++ b/css/main.css
@@ -3,10 +3,6 @@
   border-bottom: 1px solid #ECECEC;
 }
 
-.header {
-  display: none;
-}
-
 .header__container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -37,17 +33,6 @@
   margin-right: 50px;
 }
 
-.current::after {
-  content: '';
-  display: block;
-  position: absolute;
-  width: 100%;
-  height: 4px;
-  background-color: #2196f3;
-  border-radius: 2px;
-  bottom: -1px;
-}
-
 .navigate__list {
   color: #212121;
   font-family: Roboto;
@@ -68,6 +53,24 @@
   margin-right: 0;
 }
 
+@media screen and (max-width: 767px) {
+  .navigate__list {
+    display: block;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .navitage__item {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .navitage__item {
+    margin-right: 50px;
+  }
+}
+
 .navigate__link {
   padding-top: 32px;
   padding-bottom: 32px;
@@ -81,9 +84,48 @@
   color: #2196f3;
 }
 
-.navigate__link.current {
+.navigate__link--current {
   color: #2196f3;
   position: relative;
+}
+
+@media screen and (min-width: 768px) {
+  .navigate__link--current::after {
+    display: block;
+    position: absolute;
+    width: 100%;
+    content: '';
+    height: 4px;
+    background-color: #2196f3;
+    border-radius: 2px;
+    bottom: -1px;
+  }
+}
+
+.contacts-list {
+  margin-left: auto;
+}
+
+@media screen and (max-width: 767px) {
+  .contacts-list {
+    margin-top: auto;
+    margin-left: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+    -ms-flex-direction: column-reverse;
+    flex-direction: column-reverse;
+  }
+}
+
+@media screen and (max-width: 767px) and (min-width: 1200px) {
+  .contacts-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
 }
 
 .contacts-list__icon {
@@ -93,6 +135,12 @@
 
 .contacts-list__icon:hover {
   color: #2196f3;
+}
+
+@media screen and (max-width: 767px) {
+  .contacts-list__icon {
+    display: none;
+  }
 }
 
 .contacts-list {
@@ -130,12 +178,39 @@
   color: #2196f3;
 }
 
-.contacts-list__item {
-  margin-right: 50px;
+@media screen and (min-width: 768px) {
+  .contacts-list__link {
+    padding: 10px 0;
+    font-size: 14px;
+    line-height: 1.14;
+  }
 }
 
-.contacts-list__item:last-child {
-  margin-right: 0;
+@media screen and (max-width) {
+  .contacts-list__link {
+    color: #2196f3;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .contacts-list__link {
+    padding: 32px 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .contacts-list__item {
+    margin-right: 50px;
+  }
+  .contacts-list__item:last-child {
+    margin-right: 0;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .contacts-list__item {
+    margin-bottom: 30px;
+  }
 }
 
 .overlay {
