--- a/sass/mobile/_mobile.scss
+++ b/sass/mobile/_mobile.scss
@@ -1,16 +1,98 @@
-.menu {
-    @media screen and (max-width: 767px) {
-      display: flex;
-      margin-top: 64px;
-    }
-    @media screen and (min-width: 768px) {
-      display: none;
-    }
+.menu-button {
+  width: 40px;
+  height: 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  padding: 0 0;
+  border: 0;
+  background-color: transparent;
+  display: block;
+
+  @media screen and (min-width: 768px) {
+    display: none;
   }
-  .menu__item {
-    &:not(:last-child) {
-      margin-right: auto;
-    }
+}
+.mobile-menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 1;
+  -ms-flex-positive: 1;
+  flex-grow: 1;
+  z-index: 1;
+
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
+  @media screen and (min-width: 768px) and (max-width: 11199px) {
+    margin-left: 83px;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-left: 93px;
+  }
+}
+.mobile-menu.is-open {
+  width: 100%;
+  position: fixed;
+  bottom: 0;
+  top: 0;
+  left: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  overflow-y: scroll;
+  background-color: white;
+  padding: 48px 40px;
+  -webkit-box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
+          box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
+}
+.mobile-menu__close {
+  position: absolute;
+  top: 21px;
+  right: 23px;
+  border: transparent;
+  background: transparent;
+
+  @media screen and (min-width: 768px) {
+    display: none;
+  }
+
+  &:hover, 
+  &:focus {
+    fill: $hover-collor-text;
+  }
+}
+
+.menu-button, .menu-icon {
+  fill: currentColor;
+}
+.menu-button:hover, .menu-button:focus {
+  fill: $hover-collor-text;
+}
+.menu {
+  @media screen and (max-width: 767px) {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-top: 64px;
+  }
+  @media screen and (min-width: 768px) {
+    display: none;
+  }
   }
   .menu__link {
     font-weight: 500;
