--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -6,13 +6,14 @@
     line-height: 1.19;
     text-decoration: none;
     letter-spacing: 0.03em;
-    
+    display: none;
     @media screen and (min-width: 1200px) {
         margin-right: 93px;
       }
     @media screen and (max-width: 767px) {
         margin-left: 55px;
     }
+    
 }
 
 .logo__dark {
