--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,6 @@
   display: -ms-flexbox;
   display: flex;
   position: relative;
-  display: flex;
 }
 
 .navigate__item {
@@ -47,7 +46,6 @@
   display: -ms-flexbox;
   display: flex;
   position: relative;
-  display: none;
 }
 
 .navigate__list:last-child {
@@ -152,7 +150,6 @@
   margin-left: auto;
   border-radius: 4px;
   fill: currentColor;
-  display: none;
 }
 
 .contacts-list__link {
@@ -286,26 +283,25 @@
 }
 
 .main-section__title {
-  color: #FFFFFF;
-  font-weight: 900;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
   text-align: center;
-  margin-left: auto;
-  margin-right: auto;
-  letter-spacing: 0.06em;
-  text-transform: uppercase;
+  color: #FFFFFF;
+  letter-spacing: 0.03em;
+  margin-bottom: 50px;
 }
 
 @media screen and (max-width: 1199px) {
   .main-section__title {
     font-size: 26px;
-    line-height: 1.61;
+    line-height: 1.17;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .main-section__title {
-    font-size: 44px;
-    line-height: 1.36;
+    margin-bottom: 50px;
   }
 }
 
@@ -357,6 +353,7 @@
     display: flex;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
+    margin: -15px;
   }
 }
 
@@ -368,18 +365,19 @@
   }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 767px) {
   .advantages__item {
-    margin-right: 0;
+    margin: 15px;
+    -ms-flex-preferred-size: calc((100% - 60px) / 2);
+        flex-basis: calc((100% - 60px) / 2);
   }
 }
 
 @media screen and (min-width: 1200px) {
   .advantages__item {
-    margin-right: 30px;
-  }
-  .advantages__item:last-child {
-    margin-right: 0;
+    margin: 15px;
+    -ms-flex-preferred-size: calc((100% - 120px) / 4);
+        flex-basis: calc((100% - 120px) / 4);
   }
 }
 
@@ -1164,52 +1162,30 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-}
-
-@media screen and (max-width: 767px) {
-  .clients {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-  }
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin: -15px;
 }
 
 .clients__item {
-  width: 170px;
+  -ms-flex-preferred-size: calc((100% - 60px) / 2);
+      flex-basis: calc((100% - 60px) / 2);
   height: 92px;
-  margin-right: 30px;
-}
-
-@media screen and (max-width: 767px) {
-  .clients__item {
-    width: calc((100% - 30px) / 2);
-    height: 90px;
-  }
-  .clients__item:last-child {
-    margin-right: 0;
-  }
+  margin: 15px;
 }
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .clients__item {
-    width: calc((100% - 60px) / 3);
-  }
-  .clients__item:last-child {
-    margin-right: 0;
+    -ms-flex-preferred-size: calc((100% - 90px) / 3);
+        flex-basis: calc((100% - 90px) / 3);
   }
 }
 
 @media screen and (min-width: 1200px) {
   .clients__item {
-    width: calc((100% - 5 * 30px) / 6);
-  }
-  .clients__item:last-child {
-    margin-right: 30px;
+    -ms-flex-preferred-size: calc((100% - 6 * 30px) / 6);
+        flex-basis: calc((100% - 6 * 30px) / 6);
   }
 }
 
