--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -9,39 +9,23 @@
 }
 .clients {
     display: flex;
+    display: flex;
+    flex-wrap: wrap;
+    margin: -15px;
 
-    @media screen and (max-width: 767px) {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-    }
 }
 .clients__item {
-    width: 170px;
-    height: 92px;
-    margin-right: 30px;
-
-    @media screen and (max-width: 767px) {
-        width: calc((100% - 30px) / 2);
-        height: 90px;
+   
+flex-basis: calc((100% - 60px) / 2);
+height: 92px;
+margin: 15px;
        
-        &:last-child {
-            margin-right: 0;
-        }
-    }
     @media screen and (min-width: 768px) and (max-width: 1199px) {
-        width: calc((100% - 60px) / 3);
-
-        &:last-child {
-            margin-right: 0;
-        }
+        flex-basis: calc((100% - 90px) / 3);
     }
     @media screen and (min-width: 1200px) {
-        width: calc((100% - 5 * 30px) / 6);
+        flex-basis: calc((100% - 6 * 30px) / 6);
         
-        &:last-child {
-            margin-right: 30px;
-        }
     }
 }
 
