--- a/sass/components/_main-index.scss
+++ b/sass/components/_main-index.scss
@@ -76,21 +76,20 @@
       }
   }
   .main-section__title {
-    color: $title-color;
-    font-weight: 900;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.16;
     text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-    letter-spacing: 0.06em;
-    text-transform: uppercase;
+    color: $title-color;
+    letter-spacing: 0.03em;
+    margin-bottom: 50px;
 
     @media screen and (max-width: 1199px) {
         font-size: 26px;
-        line-height: 1.61;
+        line-height: 1.17;
       }
       @media screen and (min-width: 1200px) {
-        font-size: 44px;
-        line-height: 1.36;
+        margin-bottom: 50px;
       }
 }
 .main-section__button {
@@ -137,20 +136,21 @@
     @media screen and (min-width: 768px) {
         display: flex;
         flex-wrap: wrap;
+        margin: -15px;
+
       }
       @media screen and (min-width: 1200px) {
         display: flex;
       }
 }
 .advantages__item {
-    @media screen and (max-width: 767px) {
-        margin-right: 0;
+    @media screen and (min-width: 767px) {
+        margin: 15px;
+        flex-basis: calc((100% - 60px) / 2);
       }
       @media screen and (min-width: 1200px) {
-        margin-right: 30px;
-        &:last-child {
-            margin-right: 0;
-        }
+        margin: 15px;
+        flex-basis: calc((100% - 120px) / 4);
       }
       
 }
