--- a/css/main.css
+++ b/css/main.css
@@ -12,22 +12,6 @@
           align-items: center;
 }
 
-.navigate-list {
-  color: #212121;
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 16px;
-  letter-spacing: 0.02em;
-  list-style-type: none;
-  text-decoration: none;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  position: relative;
-}
-
 .navigate__item {
   margin-right: 50px;
 }
@@ -55,6 +39,14 @@
 @media screen and (max-width: 767px) {
   .navigate__list {
     display: block;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .navigate__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
   }
 }
 
@@ -1476,7 +1468,6 @@
   line-height: 1.19;
   text-decoration: none;
   letter-spacing: 0.03em;
-  display: none;
 }
 
 @media screen and (min-width: 1200px) {
