--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -7,20 +7,6 @@
     align-items: center;
 }
 
- .navigate-list {
-    color: $color-text;
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 16px;
-    letter-spacing: 0.02em;
-    list-style-type: none;
-    text-decoration: none;
-    display: flex;
-    position: relative;
- }
- 
  .navigate__item {
      margin-right: 50px;
  }
@@ -43,6 +29,9 @@
     @media screen and (max-width: 767px) {
       display: block;
     }
+    @media screen and (min-width: 1200px) {
+        display: flex;;
+      }
 }
 .navitage__item {
     @media screen and (max-width: 767px) {
