--- a/css/main.css
+++ b/css/main.css
@@ -520,6 +520,10 @@
   background-color: #F5F4FA;
 }
 
+.team {
+  margin: -15px;
+}
+
 @media screen and (min-width: 768px) {
   .team {
     display: -webkit-box;
@@ -544,11 +548,13 @@
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
   background-color: #FFFFFF;
+  margin: 15px;
 }
 
 @media screen and (max-width: 480px) {
   .team__item {
-    width: 100%;
+    -ms-flex-preferred-size: calc((100% - 30px) / 2);
+        flex-basis: calc((100% - 30px) / 2);
   }
 }
 
