--- a/sass/components/_main-index.scss
+++ b/sass/components/_main-index.scss
@@ -275,6 +275,7 @@
     background-color: $background-team;
 }
 .team {
+    margin: -15px;
     @media screen and (min-width: 768px) {
         display: flex;
         flex-wrap: wrap;
@@ -288,9 +289,10 @@
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
     background-color: $title-color;
+    margin: 15px;
 
     @media screen and (max-width: 480px) {
-        width: 100%;
+        flex-basis: calc((100% - 30px) / 2);
     }
     @media screen and (min-width: 1200px) {
         width: 270px;
