--- a/css/main.css
+++ b/css/main.css
@@ -558,6 +558,13 @@
   }
 }
 
+@media screen and (min-width: 768px) {
+  .team__item {
+    -ms-flex-preferred-size: calc((100% - 120px) / 2);
+        flex-basis: calc((100% - 120px) / 2);
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .team__item {
     width: 270px;
