--- a/sass/components/_main-index.scss
+++ b/sass/components/_main-index.scss
@@ -294,6 +294,9 @@
     @media screen and (max-width: 480px) {
         flex-basis: calc((100% - 30px) / 2);
     }
+    @media screen and (min-width: 768px){
+        flex-basis: calc((100% - 120px) / 2);
+    }
     @media screen and (min-width: 1200px) {
         width: 270px;
         margin-right: 30px;
