--- a/sass/components/_main-index.scss
+++ b/sass/components/_main-index.scss
@@ -290,19 +290,16 @@
     border-radius: 0px 0px 4px 4px;
     background-color: $title-color;
     margin: 15px;
+    
 
     @media screen and (max-width: 480px) {
         flex-basis: calc((100% - 30px) / 2);
     }
-    @media screen and (min-width: 768px){
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
         flex-basis: calc((100% - 120px) / 2);
     }
     @media screen and (min-width: 1200px) {
         width: 270px;
-        margin-right: 30px;
-        &:last-child {
-            margin-right: 0;
-        }
     }
 }
 
