--- a/sass/mobile/_mobile.scss
+++ b/sass/mobile/_mobile.scss
@@ -1,20 +1,10 @@
 
-.menu_open {
-   display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  margin-left: auto;
-  background-color: transparent;
+.menu_button {
+  display: inline-flex;
+  margin: 0;
+  padding: 0;
   border: none;
-  outline: none;
-
-  &:focus,
-  &:hover {
-    fill: $hover-collor-text;
-  }
+  background-color: transparent;
 
   @media screen and (min-width: 768px) {
     display: none;
@@ -23,71 +13,16 @@
 .menu_open .icon-cross {
   display: none;
 }
+.menu_open.is-open .icon-cross {
+  display: block;
+}
 
-/*.mobile-menu {
-  position: fixed;
-  background-color: #ffffff;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  z-index: 5;
-
-  @media screen and (min-width: 767px) {
-    display: none;
-  }
+.menu_open.is-open .icon-menu {
+  display: none;
 }
 .menu-container {
-  padding: 48px 40px;
-  height: 100vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-}
-.menu_close-btn {
-  position: absolute;
-  top: 10px;
-  right: 15px;
-}
-.menu {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-  margin-left: -10px;
-  margin-top: 64px;
-}
-.menu__item {
-  padding-left: 10px;
-
-  @media screen and (max-width: 449px) {
-    padding-left: 5px;
-  }
-}
-.menu__item:not(:first-child) {
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  border-top: 0;
-  border-bottom: 0;
-  border-right: 0;
-}
-.menu__link {
-  padding-right: 10px;
-  font-weight: 500;
-  font-size: 18px;
-  line-height: 1.22;
-  letter-spacing: 0.02em;
-  color: $hover-collor-text;
-
-  @media screen and (max-width: 449px) {
-    font-size: 12px;
-    padding-right: 5px;
-  }
+  background-color: palegoldenrod;
+  padding: 20px;
+  text-align: center;
+  font-size: 20px;
 }
