--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,4 +8,5 @@
 @import './components/modal';
 @import './components/logo';
 @import './base/basic';
-@import './base/breakpoints'
+@import './base/breakpoints';
+@import './mobile/mobile'
