--- a/sass/mobile/_mobile.scss
+++ b/sass/mobile/_mobile.scss
@@ -1,5 +1,5 @@
 
-.menu_button {
+/*.menu_button {
   display: inline-flex;
   margin: 0;
   padding: 0;
@@ -31,5 +31,124 @@
 
   &.is-open {
     display: block;
+  }
+}*/
+
+.menu_open-btn {
+  display: flex;
+  align-items: center;
+  margin-left: auto;
+  background-color: transparent;
+  border: none;
+  outline: none;
+  &:hover {
+    fill: $accent-color;
+  }
+  &:focus {
+    fill: $accent-color;
+  }
+  @media screen and (min-width: 767px) {
+    display: none;
+  }
+}
+.menu_close-btn {
+  @extend .menu_open-btn;
+  position: absolute;
+  top: 10px;
+  right: 15px;
+}
+.mobile-menu {
+  position: fixed;
+  background-color: $main-background-color;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: 5;
+  @media screen and (min-width: 767px) {
+    display: none;
+  }
+}
+.mobile-menu-list__item {
+  &:not(:first-child) {
+    margin-top: 32px;
+  }
+}
+.mobile-menu__link {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+  color: $first-header-text-color;
+  transition: color 250ms $time-function;
+  position: relative;
+  display: block;
+
+  &.active {
+    color: $accent-color;
+  }
+  &:hover {
+    color: $accent-color;
+  }
+  &:focus {
+    color: $accent-color;
+  }
+}
+.menu-container {
+  padding: 48px 40px;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.contacts-mobile__item {
+  margin-top: 32px;
+}
+.contact-mobile__tel {
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+  color: $accent-color;
+  @media screen and (max-width: 449px) {
+    font-size: 24px;
+  }
+}
+.contact-mobile__mail {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: $second-header-text-color;
+}
+.socials-menu {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: -10px;
+  margin-top: 64px;
+}
+.socials-menu__item {
+  padding-left: 10px;
+  &:not(:first-child) {
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-top: 0;
+    border-bottom: 0;
+    border-right: 0;
+  }
+  @media screen and (max-width: 449px) {
+    padding-left: 5px;
+  }
+}
+
+.socials-menu__link {
+  padding-right: 10px;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  color: $accent-color;
+  @media screen and (max-width: 449px) {
+    font-size: 12px;
+    padding-right: 5px;
   }
 }
