--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -156,4 +156,8 @@
     @media screen and (max-width: 767px) {
         margin-bottom: 30px;
     }
+
+    @media screen and (min-width: 768px) {
+        display: block;
+    }
 }                  
