--- a/sass/mobile/_mobile.scss
+++ b/sass/mobile/_mobile.scss
@@ -1,154 +1,73 @@
-
-/*.menu_button {
-  display: inline-flex;
-  margin: 0;
-  padding: 0;
-  border: none;
-  background-color: transparent;
-
+menu {
+  @media screen and (max-width: 767px) {
+    display: flex;
+    margin-top: 64px;
+  }
   @media screen and (min-width: 768px) {
     display: none;
   }
 }
-.menu_button .icon-cross {
-  display: none;
-}
-.menu_button.is-open .icon-cross {
-  display: block;
-}
-
-.menu_button.is-open .icon-menu {
-  display: none;
-}
-.menu-container {
-  display: none;
-  background-color: palegoldenrod;
-  padding: 20px;
-  text-align: center;
-  font-size: 20px;
-  position: absolute;
-  
-
-  &.is-open {
-    display: block;
-  }
-}*/
-
-.menu_open-btn {
-  display: flex;
-  align-items: center;
-  margin-left: auto;
-  background-color: transparent;
-  border: none;
-  outline: none;
-  &:hover {
-    fill: $accent-color;
-  }
-  &:focus {
-    fill: $accent-color;
-  }
-  @media screen and (min-width: 767px) {
-    display: none;
+.menu__item {
+  &:not(:last-child) {
+    margin-right: auto;
   }
 }
-.menu_close-btn {
-  @extend .menu_open-btn;
-  position: absolute;
-  top: 10px;
-  right: 15px;
-}
-.mobile-menu {
-  position: fixed;
-  background-color: $main-background-color;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  z-index: 5;
-  @media screen and (min-width: 767px) {
-    display: none;
-  }
-}
-.mobile-menu-list__item {
-  &:not(:first-child) {
-    margin-top: 32px;
-  }
-}
-.mobile-menu__link {
-  font-weight: 500;
-  font-size: 40px;
-  line-height: 1.18;
-  letter-spacing: 0.02em;
-  color: $first-header-text-color;
-  transition: color 250ms $time-function;
-  position: relative;
-  display: block;
-
-  &.active {
-    color: $accent-color;
-  }
-  &:hover {
-    color: $accent-color;
-  }
-  &:focus {
-    color: $accent-color;
-  }
-}
-.menu-container {
-  padding: 48px 40px;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-.contacts-mobile__item {
-  margin-top: 32px;
-}
-.contact-mobile__tel {
-  font-weight: 500;
-  font-size: 34px;
-  line-height: 1.18;
-  letter-spacing: 0.02em;
-  color: $accent-color;
-  @media screen and (max-width: 449px) {
-    font-size: 24px;
-  }
-}
-.contact-mobile__mail {
-  font-weight: 500;
-  font-size: 24px;
-  line-height: 1.17;
-  letter-spacing: 0.02em;
-  color: $second-header-text-color;
-}
-.socials-menu {
-  display: flex;
-  flex-wrap: wrap;
-  margin-left: -10px;
-  margin-top: 64px;
-}
-.socials-menu__item {
-  padding-left: 10px;
-  &:not(:first-child) {
-    border: 1px solid rgba(33, 33, 33, 0.2);
-    border-top: 0;
-    border-bottom: 0;
-    border-right: 0;
-  }
-  @media screen and (max-width: 449px) {
-    padding-left: 5px;
-  }
-}
-
-.socials-menu__link {
-  padding-right: 10px;
+.menu__link {
   font-weight: 500;
   font-size: 18px;
   line-height: 1.22;
   letter-spacing: 0.02em;
-  color: $accent-color;
-  @media screen and (max-width: 449px) {
-    font-size: 12px;
-    padding-right: 5px;
+  color: $hover-collor-text;
+}
+.menu__line {
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  transform: rotate(90deg);
+}
+.mobile-menu {
+  display: flex;
+  flex-grow: 1;
+  z-index: 1;
+
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
+  @media screen and (min-width: 768px) and (max-width: 11199px) {
+    margin-left: 83px;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-left: 93px;
+  }
+}
+.mobile-menu {
+  &.is-open {
+    width: 100%;
+    position: fixed;
+    bottom: 0;
+    top: 0;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    overflow-y: scroll;
+
+    background-color: white;
+
+    padding: 48px 40px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08),
+      0px 1px 3px rgba(0, 0, 0, 0.16);
+  }
+}
+.mobile-menu__close {
+  position: absolute;
+  top: 21px;
+  right: 23px;
+  border: transparent;
+  background: transparent;
+  @media screen and (min-width: 768px) {
+    display: none;
+  }
+  &:hover,
+  &:focus {
+    fill: $hover-collor-text;
   }
 }
