--- a/css/main.css
+++ b/css/main.css
@@ -93,8 +93,10 @@
   }
 }
 
-.contacts-list {
-  margin-left: auto;
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .contacts-list {
+    display: block;
+  }
 }
 
 @media screen and (max-width: 767px) {
@@ -201,12 +203,6 @@
 @media screen and (max-width: 767px) {
   .contacts-list__item {
     margin-bottom: 30px;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .contacts-list__item {
-    display: block;
   }
 }
 
