--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -74,8 +74,11 @@
    } 
 }
  .contacts-list {
-     margin-left: auto;
+    
      
+     @media screen and (min-width: 768px) and (max-width: 1199px) {
+         display: block;
+     }
      @media screen and (max-width: 767px) {
         margin-top: auto;
         margin-left: 0;
@@ -87,7 +90,6 @@
         -ms-flex-direction: column-reverse;
         flex-direction: column-reverse;
         
-
         @media screen and (min-width: 1200px) {
             display: -webkit-box;
             display: -ms-flexbox;
@@ -157,7 +159,5 @@
         margin-bottom: 30px;
     }
 
-    @media screen and (min-width: 768px) {
-        display: block;
-    }
+
 }                  
