--- a/sass/mobile/_mobile.scss
+++ b/sass/mobile/_mobile.scss
@@ -1,4 +1,4 @@
-menu {
+.menu {
   @media screen and (max-width: 767px) {
     display: flex;
     margin-top: 64px;
@@ -15,7 +15,25 @@ menu {
     margin-right: auto;
   }
 }
-
+.number {
+  @media screen and (max-width: 767px) {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 34px;
+    line-height: 1.17;
+    letter-spacing: 0.02em;
+    color: $hover-collor-text;
+  }
+}
+.mail {
+  @media screen and (max-width: 767px) {
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 1.16;
+    letter-spacing: 0.02em;
+    color: $color-text-header;
+  }
+}
 .menu__link {
   font-weight: 500;
   font-size: 18px;
@@ -68,8 +86,7 @@ menu {
   position: absolute;
   top: 21px;
   right: 23px;
-  border: transparent;
-  background: transparent;
+ 
   @media screen and (min-width: 768px) {
     display: none;
   }
