--- a/sass/mobile/_mobile.scss
+++ b/sass/mobile/_mobile.scss
@@ -24,6 +24,10 @@
     letter-spacing: 0.02em;
     color: $hover-collor-text;
   }
+  @media screen and (max-width: 1199px) {
+    display: block;
+  }
+
 }
 .mail {
   @media screen and (max-width: 767px) {
@@ -33,6 +37,7 @@
     letter-spacing: 0.02em;
     color: $color-text-header;
   }
+
 }
 .menu__link {
   font-weight: 500;
@@ -105,3 +110,11 @@
   margin-bottom: 36px;
   }
 }
+.menu-button {
+  @media screen and (max-width: 7687px) {
+    margin-left: auto;
+  }
+  @media screen and (min-width: 768px) {
+  display: none;
+  }
+    }
