--- a/css/main.css
+++ b/css/main.css
@@ -867,7 +867,6 @@
 
 @media screen and (max-width: 480px) {
   .footer-container {
-    width: 480px;
     display: block;
   }
 }
@@ -897,10 +896,6 @@
     display: -webkit-box;
     display: -ms-flexbox;
   }
-}
-
-.footer-adress {
-  margin-right: 70px;
 }
 
 @media screen and (max-width: 767px) {
@@ -1265,6 +1260,7 @@
 @media screen and (min-width: 1200px) {
   .modal {
     width: 528px;
+    min-height: 581px;
   }
 }
 
@@ -1749,7 +1745,7 @@ img {
   align-items: center;
   padding: 0 0;
   border: 0;
-  background-color: transparent;
+  background-color: white;
   display: block;
 }
 
