--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -19,6 +19,7 @@
     }
     @media screen and (min-width: 1200px) {
         width: 528px;
+        min-height: 581px;
     }
 }
 .modal__button-close {
