--- a/sass/mobile/_mobile.scss
+++ b/sass/mobile/_mobile.scss
@@ -124,8 +124,9 @@
   align-items: center;
   padding: 0 0;
   border: 0;
-  background-color: transparent;
+  background-color: white;
   display: block;
+
   
   
 
